project(projects)

add_subdirectory(00_ppx_info)
add_subdirectory(01_triangle)
add_subdirectory(02_triangle_spinning)
add_subdirectory(03_square_textured)
add_subdirectory(04_cube)
add_subdirectory(05_cube_textured)
add_subdirectory(06_compute_fill)
add_subdirectory(07_draw_indexed)
add_subdirectory(08_basic_geometry)
add_subdirectory(09_obj_geometry)
add_subdirectory(10_cube_map)
add_subdirectory(11_compressed_texture)
add_subdirectory(12_shadows)
add_subdirectory(13_normal_map)
add_subdirectory(14_input)
add_subdirectory(15_basic_material)
add_subdirectory(16_gbuffer)
add_subdirectory(17_primitives)
add_subdirectory(18_arcball_camera)
add_subdirectory(19_camera_fit_scene)
add_subdirectory(20_camera_motion)
add_subdirectory(21_text_draw)
add_subdirectory(22_image_filter)
add_subdirectory(23_async_compute)
add_subdirectory(27_mipmap_demo)
add_subdirectory(alloc)
add_subdirectory(fishtornado)
add_subdirectory(fluid_simulation)
