load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "compute_operations",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/FullScreenTriangle.ps.spv",
        "//assets:basic/shaders/FullScreenTriangle.vs.spv",
        "//assets:benchmarks/shaders/ComputeFilter3.cs.spv",
        "//assets:benchmarks/shaders/ComputeFilter5.cs.spv",
        "//assets:benchmarks/shaders/ComputeFilter7.cs.spv",
    ],
    deps = ["//:ppx"],
)
