load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "draw_call",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:benchmarks/shaders/spv/PassThroughPos.ps.spv",
        "//assets:benchmarks/shaders/spv/PassThroughPos.vs.spv",
    ],
    deps = ["//:ppx"],
)
