load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "primitive_assembly",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:benchmarks/shaders/PassThroughPos.ps.spv",
        "//assets:benchmarks/shaders/PassThroughPos.vs.spv",
    ],
    deps = ["//:ppx"],
)
