load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "render_target",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:benchmarks/shaders/PassThroughPos.ps.spv",
        "//assets:benchmarks/shaders/PassThroughPos.vs.spv",
        "//assets:benchmarks/shaders/MultipleRT.ps.spv",
        "//assets:benchmarks/shaders/MultipleRT.vs.spv",
        "//assets:basic/shaders/FullScreenTriangle.ps.spv",
        "//assets:basic/shaders/FullScreenTriangle.vs.spv",
    ],
    deps = ["//:ppx"],
)
