load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "texture_load",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:benchmarks/shaders/spv/TextureLoad.ps.spv",
        "//assets:benchmarks/shaders/spv/TextureLoad.vs.spv",
        "//assets:benchmarks/shaders/spv/TextureLoad4Textures.ps.spv",
        "//assets:benchmarks/shaders/spv/TextureLoad4Textures.vs.spv",
    ],
    deps = ["//:ppx"],
)
