load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "texture_sample",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:benchmarks/shaders/spv/TextureSample.ps.spv",
        "//assets:benchmarks/shaders/spv/TextureSample.vs.spv",
        "//assets:benchmarks/shaders/spv/TextureSample4Textures.ps.spv",
        "//assets:benchmarks/shaders/spv/TextureSample4Textures.vs.spv",
    ],
    deps = ["//:ppx"],
)
