load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "texture_transfer_cpu_to_gpu",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/FullScreenTriangle.ps.spv",
        "//assets:basic/shaders/FullScreenTriangle.vs.spv",
    ],
    deps = ["//:ppx"],
)
