load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "01_triangle",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/StaticVertexColors.ps.spv",
        "//assets:basic/shaders/StaticVertexColors.vs.spv",
    ],
    deps = ["//:ppx"],
)
