load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "02_triangle_spinning",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/spv/VertexColors.ps.spv",
        "//assets:basic/shaders/spv/VertexColors.vs.spv",
    ],
    deps = ["//:ppx"],
)
