load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "05_cube_textured",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/Texture.ps.spv",
        "//assets:basic/shaders/Texture.vs.spv",
    ],
    deps = ["//:ppx"],
)
