load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "06_compute_fill",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/spv/ComputeFill.cs.spv",
        "//assets:basic/shaders/spv/Texture.ps.spv",
        "//assets:basic/shaders/spv/Texture.vs.spv",
    ],
    deps = ["//:ppx"],
)
