load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "10_cube_map",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/CubeMap.vs.spv",
        "//assets:basic/shaders/SkyBox.ps.spv",
        "//assets:basic/shaders/SkyBox.vs.spv",
    ],
    deps = ["//:ppx"],
)
