load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "11_compressed_texture",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/Texture.ps.spv",
        "//assets:basic/shaders/Texture.vs.spv",
    ],
    deps = ["//:ppx"],
)
