load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "12_camera",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/spv/Depth.vs.spv",
        "//assets:basic/shaders/spv/DiffuseShadow.ps.spv",
        "//assets:basic/shaders/spv/DiffuseShadow.vs.spv",
        "//assets:basic/shaders/spv/VertexColors.ps.spv",
        "//assets:basic/shaders/spv/VertexColors.vs.spv",
    ],
    deps = ["//:ppx"],
)
