load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "13_normal_map",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/NormalMap.ps.spv",
        "//assets:basic/shaders/NormalMap.vs.spv",
        "//assets:basic/shaders/VertexColors.ps.spv",
        "//assets:basic/shaders/VertexColors.vs.spv",
    ],
    deps = ["//:ppx"],
)
