load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "15_basic_material",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/Texture.ps.spv",
        "//assets:basic/shaders/Texture.vs.spv",
        "//assets:materials/shaders/BlinnPhong.ps.spv",
        "//assets:materials/shaders/Gouraud.ps.spv",
        "//assets:materials/shaders/PBR.ps.spv",
        "//assets:materials/shaders/Phong.ps.spv",
        "//assets:materials/shaders/VertexShader.vs.spv",
    ],
    deps = ["//:ppx"],
)
