load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "16_gbuffer",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = COPTS,
    data = [
        "//assets:basic/shaders/FullScreenTriangle.ps.spv",
        "//assets:basic/shaders/FullScreenTriangle.vs.spv",
        "//assets:basic/shaders/Texture.ps.spv",
        "//assets:basic/shaders/Texture.vs.spv",
        "//assets:gbuffer/shaders/DeferredLight.ps.spv",
        "//assets:gbuffer/shaders/DeferredLight.vs.spv",
        "//assets:gbuffer/shaders/DeferredRender.ps.spv",
        "//assets:gbuffer/shaders/DrawGBufferAttribute.ps.spv",
        "//assets:gbuffer/shaders/DrawGBufferAttribute.vs.spv",
        "//assets:gbuffer/shaders/VertexShader.vs.spv",
    ],
    deps = ["//:ppx"],
)
