load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "16_gbuffer",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = COPTS,
    data = [
        "//assets:basic/shaders/spv/FullScreenTriangle.ps.spv",
        "//assets:basic/shaders/spv/FullScreenTriangle.vs.spv",
        "//assets:basic/shaders/spv/Texture.ps.spv",
        "//assets:basic/shaders/spv/Texture.vs.spv",
        "//assets:gbuffer/shaders/spv/DeferredLight.ps.spv",
        "//assets:gbuffer/shaders/spv/DeferredLight.vs.spv",
        "//assets:gbuffer/shaders/spv/DeferredRender.ps.spv",
        "//assets:gbuffer/shaders/spv/DrawGBufferAttribute.ps.spv",
        "//assets:gbuffer/shaders/spv/DrawGBufferAttribute.vs.spv",
        "//assets:gbuffer/shaders/spv/VertexShader.vs.spv",
    ],
    deps = ["//:ppx"],
)
