load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "19_camera_fit_scene",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/VertexColors.ps.spv",
        "//assets:basic/shaders/VertexColors.vs.spv",
    ],
    deps = ["//:ppx"],
)
