load("//tools:yeti.bzl", "yeti_cc_binary")
load("//build_defs:config.bzl", "COPTS")

yeti_cc_binary(
    name = "21_text_draw",
    srcs = ["main.cpp"],
    copts = COPTS,
    data = [
        "//assets:basic/shaders/TextDraw.ps.spv",
        "//assets:basic/shaders/TextDraw.vs.spv",
    ],
    deps = ["//:ppx"],
)
